--- a/assets/custom.css
+++ b/assets/custom.css
@@ -10,18 +10,31 @@ Colors
   background-position: top !important;
 }
 
+#banner-left h1 {
+  font-weight: 600;
+}
+
+#banner-right-col-text.banner-right-col-text-wrap {
+  /*.fas.fa-arrow-right {
+    font-size: 2.5rem;
+  }*/
+}
 #banner-right-col-text.banner-right-col-text-wrap a {
   padding: 1.2em 4em;
+}
+#banner-right-col-text.banner-right-col-text-wrap .elementor-button-icon.elementor-align-icon-right {
+  display: flex;
+  align-items: center;
 }
 
 #hero {
   padding-bottom: 2em;
 }
 #hero.home-hero-wrap {
-  margin-top: -131px !important;
+  margin-top: -177px !important;
   min-height: 100vh;
   padding-top: 75vh;
-  padding-bottom: 2vh;
+  padding-bottom: 27vh;
 }
 #hero .elementor-container.elementor-column-gap-default {
   height: initial;
@@ -48,7 +61,7 @@ Colors
 }
 @media screen and (max-width: 1180.98px) and (max-height: 820.98px) and (orientation: landscape) {
   #hero.home-hero-wrap {
-    padding: 72vh 1.618em 2vh 1.618em;
+    padding: 69vh 1.618em 2vh 1.618em;
   }
 }
 @media screen and (max-width: 1024.98px) and (max-height: 1366.98px) and (orientation: portrait) {
@@ -198,7 +211,7 @@ Colors
 @media screen and (max-width: 375.98px) and (max-height: 667.98px) and (orientation: portrait) {
   #hero.home-hero-wrap {
     padding-top: 57vh;
-    padding-bottom: 17vh;
+    padding-bottom: 31vh;
   }
 }
 @media (max-width: 360.98px) and (orientation: portrait) {
@@ -352,7 +365,7 @@ Navigation
 }
 
 .elementor-nav-menu--dropdown.elementor-nav-menu__container {
-  background-color: #000000;
+  background-color: #4F6242;
 }
 .elementor-nav-menu--dropdown.elementor-nav-menu__container #menu-2-a85c89e {
   padding-top: 1.618em;
