--- a/assets/supports/_nav.scss
+++ b/assets/supports/_nav.scss
@@ -108,7 +108,7 @@ Navigation
 
 .elementor-nav-menu--dropdown {
   &.elementor-nav-menu__container {
-    background-color: $nav-background-dark;
+    background-color: $nav-background-green;
     #menu-2-a85c89e {
       padding-top: 1.618em;
       padding-bottom: 1.618em;
