--- a/assets/supports/variables/_colors.scss
+++ b/assets/supports/variables/_colors.scss
@@ -11,3 +11,4 @@ $hamburger-dark: #000000;
 $fade-in-on-load: #72720F;
 $body-background-color: #ffffff;
 $nav-background-dark: #000000;
+$nav-background-green: #4F6242;
