--- a/assets/supports/_banner.scss
+++ b/assets/supports/_banner.scss
@@ -18,6 +18,32 @@
       align-items: center;
     }
 
+    .elementor-button.elementor-button-link.elementor-size-sm {
+      transition: color 0.5s;
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
+      &:hover {
+        color: #000;
+        border-color: $white-background;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: $white-background;
+        z-index: -1;
+        transform: translateX(-100%);
+        transition: transform 0.5s;
+      }
+      &:hover::before {
+        transform: translateX(0);
+      }
+    }
+
     /*.fas.fa-arrow-right {
       font-size: 2.5rem;
     }*/
