--- a/assets/supports/variables/_colors.scss
+++ b/assets/supports/variables/_colors.scss
@@ -12,3 +12,5 @@ $fade-in-on-load: #72720F;
 $body-background-color: #ffffff;
 $nav-background-dark: #000000;
 $nav-background-green: #4F6242;
+$green-background: #72720F;
+$white-background: #ffffff;
